# LuaSTG-Retro

./: CMakeLists.txt  version.json
.github/workflows/: arm64.yml  c-cpp.yml  cpp-ci.yml  release.yml
LuaSTG/: CMakeLists.txt
LuaSTG/Core/Graphics/: SwapChain.hpp  SwapChain_D3D11.cpp
LuaSTG/Core/Graphics/Direct3D11/: LetterBoxingRenderer.cpp  LetterBoxingRenderer.hpp
LuaSTG/LuaSTG/: AppFrame.cpp  AppFrame.h  AppFrameInput.cpp
LuaSTG/LuaSTG/Debugger/: ImGuiExtension.cpp
LuaSTG/LuaSTG/DiscordRPC/: DiscordRPC.cpp  DiscordRPC.hpp
LuaSTG/LuaSTG/GameResource/: ResourceManager.cpp  ResourceManager.h  ResourcePool.cpp  ResourceVideo.hpp
LuaSTG/LuaSTG/GameResource/Implement/: ResourceVideoImpl.cpp  ResourceVideoImpl.hpp
LuaSTG/LuaSTG/LuaBinding/: LW_DiscordRPC.cpp  LW_ResourceMgr.cpp
LuaSTG/LuaSTG/LuaBinding/modern/: SwapChain.cpp
cmake/: TargetCommonOptions.cmake
data/test/scripts/: main.lua  test_video.lua
engine/: CMakeLists.txt
engine/file-system/: CMakeLists.txt
engine/file-system/core/: DATArchiveEncryption.hpp  FileSystem.hpp  FileSystemDATArchive.cpp  FileSystemDATArchive.hpp  FileSystemManager.cpp
engine/lua/lua/: plus.hpp
engine/reference-counted/core/: ReferenceCounted.hpp
engine/video/: CMakeLists.txt
engine/video/backend/: VideoDecoder.cpp  VideoDecoderMediaFoundation.cpp  VideoDecoderMediaFoundation.hpp
engine/video/core/: VideoDecoder.hpp
engine/window-system/core/: FrameRateController.cpp
engine/window-system/windows/: Window.hpp
imgui/: CMakeLists.txt
imgui/backend/: imgui_impl_dx11.cpp
imgui/binding/src/: Constants.cpp
